--- a/index.html
+++ b/index.html
@@ -77,22 +77,60 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Information</h2>
-            <h3 class="section-subheading text-muted">Some information about the wedding</h3>
+            <h3 class="section-subheading text-muted">TODO</h3>
           </div>
         </div>
       </div>
 
-        <div class="row text-center">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <h4 class="service-heading">Getting There</h4>
+          <p class="text-muted">The ceremony and reception will both take place at Pembroke Lodge, Richmond Park, Queen Street, Richmond, TW10 5HX.</p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Arrival Time</h4>
+          <p class="text-muted">Day guests: Please arrive at 12:30pm and follow the signs directing you to The Russell Suite upon arrival.</p>
+          <p class="text-muted">Evening guests: Please arrive from 6.15pm and follow the signs directing you to The Russell Suite upon arrival.</p>
+        </div>
+    </section>
+
+    <!-- RSVP -->
+      <iframe id="rsvp" src="https://docs.google.com/forms/d/e/1FAIpQLSejbH6igTEw-UQ4LYBBooIqc_6Z3dcVThy9B4R8b-X_oFchlg/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
           <div class="col-md-4">
-            <h4 class="service-heading">Getting There</h4>
-            <p class="text-muted">The ceremony and reception will both take place at Pembroke Lodge, Richmond Park, Queen Street, Richmond, TW10 5HX.</p>
+            <ul class="list-inline social-buttons">
+            </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="service-heading">Arrival Time</h4>
-            <p class="text-muted">Day guests: Please arrive at 12:30pm and follow the signs directing you to The Russell Suite upon arrival.</p>
-            <p class="text-muted">Evening guests: Please arrive from 6.15pm and follow the signs directing you to The Russell Suite upon arrival.</p>
+            <ul class="list-inline quicklinks">
+              <li class="list-inline-item">
+                <a href="mailto:kayandphilipp@gmail.com">e-mail</a>
+              </li>
+            </ul>
           </div>
-          <div class="col-md-4">
-            <h4 class="service-heading">Car parking</h4>
-            <p class="text-muted">Guests who are driving should leave extra time to get parked as the car park is open to the general public and can therefore get extremely busy. Cars can be left overnight provided a parking permit is displayed in your window screen. These are freely available at the venue.</p>
-      
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Contact form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/agency.min.js"></script>
+
+  </body>
+
+</html>
