--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
           <p class="text-muted">Day guests: Please arrive at 12:30pm and follow the signs directing you to The Russell Suite upon arrival.</p>
           <p class="text-muted">Evening guests: Please arrive from 6.15pm and follow the signs directing you to The Russell Suite upon arrival.</p>
         </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Car Parking</h4>
+          <p class="text-muted">Guests who are driving should leave extra time to get parked as the car park is open to the general public and can therefore get extremely busy. Cars can be left overnight provided a parking permit is displayed in your window screen. These are freely available at the venue.</p>
+          <p class="text-muted">Please note that the only access and exit points after dusk will be at Richmond Gate on the Star and Garter roundabout where a gate man will be stationed. </p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Taxis</h4>
+          <p class="text-muted">Please pre-book your carriages to arrive at 11pm. Recommended taxi companies:</p>
+          <p class="text-muted">Parker Cars: 0208 560 0000 </p>
+          <p class="text-muted">Riverside Cars: 020 8878 7777</p>
+          <p class="text-muted">Rugby Cars: 0208 891 5000</p>
+        </div>
     </section>
 
     <!-- RSVP -->
