--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Information</h2>
-            <h3 class="section-subheading text-muted">TODO</h3>
+            <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
       </div>
@@ -103,6 +103,28 @@
           <p class="text-muted">Parker Cars: 0208 560 0000 </p>
           <p class="text-muted">Riverside Cars: 020 8878 7777</p>
           <p class="text-muted">Rugby Cars: 0208 891 5000</p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Accommodation</h4>
+          <p class="text-muted">There are plenty of charming hotels in the Richmond Hill area. Those closest to Pembroke Lodge include: </p>
+          <p class="text-muted"><a href="http://www.petershamhotel.co.uk">The Petersham</a></p>
+          <p class="text-muted"><a href="http://www.thebingham.co.uk.co.uk">The Bingham</a></p>
+          <p class="text-muted"><a href="http://www.richmondhill-hotel.co.uk">Richmond Hill Hotel</a></p>
+          <p class="text-muted">Richmond also has a Premier Inn and a Travelodge near the town centre. These are a short taxi ride away from the venue.</p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Children</h4>
+          <p class="text-muted">Unfortunately we are unable to accommodate children due to number restrictions. Please make alternative arrangements and, parents, enjoy your day off!</p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Dietary Requirements</h4>
+          <p class="text-muted">Should you have any special dietary requirements, please specify this when responding to us so we can notify the catering team.</p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Gifts</h4>
+          <p class="text-muted">Your presence on our special day is the best gift we could wish for so we are hopeful you can make it. If you do, however, wish to give a gift, we have set up the following registry pages:</p>
+          <p class="text-muted"><a href="http://www.our-wedding-list.co.uk/squires.schmid.21973">Honeymoon Registry</a></p>
+          <p class="text-muted"><a href="https://www.oxfam.org.uk/shop/gift-list/?gid=1022964">Oxfam Charity Registry</a></p>
         </div>
     </section>
 
