--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <p class="text-muted"><a href="http://www.petershamhotel.co.uk">The Petersham</a></p>
           <p class="text-muted"><a href="http://www.thebingham.co.uk.co.uk">The Bingham</a></p>
           <p class="text-muted"><a href="http://www.richmondhill-hotel.co.uk">Richmond Hill Hotel</a></p>
-          <p class="text-muted">Richmond also has a Premier Inn and a Travelodge near the town centre. These are a short taxi ride away from the venue.</p>
+          <p class="text-muted">Richmond also has a <a href="https://www.premierinn.com/gb/en/hotels/england/greater-london/london/london-richmond.html">Premier Inn</a> and a <a href="https://www.travelodge.co.uk/hotels/600/London-Richmond-Central-hotel">Travelodge</a> near the town centre. These are a short taxi ride away from the venue.</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Children</h4>
@@ -129,7 +129,7 @@
     </section>
 
     <!-- RSVP -->
-      <iframe id="rsvp" src="https://docs.google.com/forms/d/e/1FAIpQLSejbH6igTEw-UQ4LYBBooIqc_6Z3dcVThy9B4R8b-X_oFchlg/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <iframe id="rsvp" src="https://docs.google.com/forms/d/e/1FAIpQLSejbH6igTEw-UQ4LYBBooIqc_6Z3dcVThy9B4R8b-X_oFchlg/viewform?embedded=true" width="100%" height="1700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
     <!-- Footer -->
     <footer>
