--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#info">Information</a>
+              <a class="nav-link js-scroll-trigger" href="#info">Guest Information</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
@@ -76,8 +76,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Information</h2>
-            <h3 class="section-subheading text-muted"></h3>
+            <h2 class="section-heading">Guest Information</h2>
+
           </div>
         </div>
       </div>
@@ -85,46 +85,46 @@
       <div class="row text-center">
         <div class="col-md-4">
           <h4 class="service-heading">Getting There</h4>
-          <p class="text-muted">The ceremony and reception will both take place at Pembroke Lodge, Richmond Park, Queen Street, Richmond, TW10 5HX.</p>
+          <p class="info-text">The ceremony and reception will both take place at Pembroke Lodge, Richmond Park, Queen Street, Richmond, TW10 5HX.</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Arrival Time</h4>
-          <p class="text-muted">Day guests: Please arrive at 12:30pm and follow the signs directing you to The Russell Suite upon arrival.</p>
-          <p class="text-muted">Evening guests: Please arrive from 6.15pm and follow the signs directing you to The Russell Suite upon arrival.</p>
-        </div>
-        <div class="col-md-4">
-          <h4 class="service-heading">Car Parking</h4>
-          <p class="text-muted">Guests who are driving should leave extra time to get parked as the car park is open to the general public and can therefore get extremely busy. Cars can be left overnight provided a parking permit is displayed in your window screen. These are freely available at the venue.</p>
-          <p class="text-muted">Please note that the only access and exit points after dusk will be at Richmond Gate on the Star and Garter roundabout where a gate man will be stationed. </p>
+          <p class="info-text">Day guests: Please arrive at 12:30pm and follow the signs directing you to The Russell Suite upon arrival.</p>
+          <p class="info-text">Evening guests: Please arrive from 6.15pm and follow the signs directing you to The Russell Suite upon arrival.</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Taxis</h4>
-          <p class="text-muted">Please pre-book your carriages to arrive at 11pm. Recommended taxi companies:</p>
-          <p class="text-muted">Parker Cars: 0208 560 0000 </p>
-          <p class="text-muted">Riverside Cars: 020 8878 7777</p>
-          <p class="text-muted">Rugby Cars: 0208 891 5000</p>
+          <p class="info-text">Please pre-book your carriages to arrive at 11pm. Recommended taxi companies:</p>
+          <p class="info-text">Parker Cars: 0208 560 0000 </p>
+          <p class="info-text">Riverside Cars: 020 8878 7777</p>
+          <p class="info-text">Rugby Cars: 0208 891 5000</p>
+        </div>
+        <div class="col-md-4">
+          <h4 class="service-heading">Car Parking</h4>
+          <p class="info-text">Guests who are driving should leave extra time to get parked as the car park is open to the general public and can therefore get extremely busy. Cars can be left overnight provided a parking permit is displayed in your window screen. These are freely available at the venue.</p>
+          <p class="info-text">Please note that the only access and exit points after dusk will be at Richmond Gate on the Star and Garter roundabout where a gate man will be stationed. </p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Accommodation</h4>
-          <p class="text-muted">There are plenty of charming hotels in the Richmond Hill area. Those closest to Pembroke Lodge include: </p>
-          <p class="text-muted"><a href="http://www.petershamhotel.co.uk">The Petersham</a></p>
-          <p class="text-muted"><a href="http://www.thebingham.co.uk.co.uk">The Bingham</a></p>
-          <p class="text-muted"><a href="http://www.richmondhill-hotel.co.uk">Richmond Hill Hotel</a></p>
-          <p class="text-muted">Richmond also has a <a href="https://www.premierinn.com/gb/en/hotels/england/greater-london/london/london-richmond.html">Premier Inn</a> and a <a href="https://www.travelodge.co.uk/hotels/600/London-Richmond-Central-hotel">Travelodge</a> near the town centre. These are a short taxi ride away from the venue.</p>
+          <p class="info-text">There are plenty of charming hotels in the Richmond Hill area. Those closest to Pembroke Lodge include: </p>
+          <p class="info-text"><a href="http://www.petershamhotel.co.uk">The Petersham</a></p>
+          <p class="info-text"><a href="http://www.thebingham.co.uk.co.uk">The Bingham</a></p>
+          <p class="info-text"><a href="http://www.richmondhill-hotel.co.uk">Richmond Hill Hotel</a></p>
+          <p class="info-text">Richmond also has a <a href="https://www.premierinn.com/gb/en/hotels/england/greater-london/london/london-richmond.html">Premier Inn</a> and a <a href="https://www.travelodge.co.uk/hotels/600/London-Richmond-Central-hotel">Travelodge</a> near the town centre. These are a short taxi ride away from the venue.</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Children</h4>
-          <p class="text-muted">Unfortunately we are unable to accommodate children due to number restrictions. Please make alternative arrangements and, parents, enjoy your day off!</p>
+          <p class="info-text">Unfortunately we are unable to accommodate children due to number restrictions. Please make alternative arrangements and, parents, enjoy your day off!</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Dietary Requirements</h4>
-          <p class="text-muted">Should you have any special dietary requirements, please specify this when responding to us so we can notify the catering team.</p>
+          <p class="info-text">Should you have any special dietary requirements, please specify this when responding to us so we can notify the catering team.</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Gifts</h4>
-          <p class="text-muted">Your presence on our special day is the best gift we could wish for so we are hopeful you can make it. If you do, however, wish to give a gift, we have set up the following registry pages:</p>
-          <p class="text-muted"><a href="http://www.our-wedding-list.co.uk/squires.schmid.21973">Honeymoon Registry</a></p>
-          <p class="text-muted"><a href="https://www.oxfam.org.uk/shop/gift-list/?gid=1022964">Oxfam Charity Registry</a></p>
+          <p class="info-text">Your presence on our special day is the best gift we could wish for so we are hopeful you can make it. If you do, however, wish to give a gift, we have set up the following registry pages:</p>
+          <p class="info-text"><a href="http://www.our-wedding-list.co.uk/squires.schmid.21973">Honeymoon Registry</a></p>
+          <p class="info-text"><a href="https://www.oxfam.org.uk/shop/gift-list/?gid=1022964">Oxfam Charity Registry</a></p>
         </div>
     </section>
 
