--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <h4 class="service-heading">Getting There</h4>
-          <p class="info-text">The ceremony and reception will both take place at Pembroke Lodge, Richmond Park, Queen Street, Richmond, TW10 5HX.</p>
+          <p class="info-text">The ceremony and reception will both take place at <a href="https://goo.gl/maps/ahphqt1eYko">Pembroke Lodge, Richmond Park, Queen Street, Richmond, TW10 5HX</a>.</p>
         </div>
         <div class="col-md-4">
           <h4 class="service-heading">Arrival Time</h4>
