--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="theme-color" content="#324B6A" />
 
     <title>Kayleigh & Philipp</title>
 
