--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h2 class="section-heading">RSVP</h2>
 
           </div>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSejbH6igTEw-UQ4LYBBooIqc_6Z3dcVThy9B4R8b-X_oFchlg">Click here to RSVP</a>
+          <a href="https://goo.gl/forms/VbYAK30ADFk56nc03">Click here to RSVP</a>
         
           </div>
         
