--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h2 class="section-heading">RSVP</h2>
 
           </div>
-          <a href="https://goo.gl/forms/VbYAK30ADFk56nc03">Click here to RSVP</a>
+         <div class="row text-center"> <a href="https://goo.gl/forms/VbYAK30ADFk56nc03">Click here to RSVP</a></div>
         
           </div>
         
